Break intercept lib into multiple source files

--- a/intercept/Makefile
+++ b/intercept/Makefile
@@ -3,9 +3,10 @@ SRCDIR=	${.CURDIR}/..
 .PATH: ${SRCDIR}
 
 PROG=	intercept.so
-SRCS=	intercept.c
+SRCS=	intercept.c pathmap.c mapspec.c dbglog.c
 MAN=
 
+CFLAGS+=	-Wall -Werror
 CFLAGS+=	-I${SRCDIR}/${MACHINE_ARCH} -I${SRCDIR}
 CFLAGS+=	-shared -fPIC -Wl,-znow
 LDADD+=		-lelf
